[project]
name = "PyCav"
version = "0.1.0"
description = "PyCav is a project aiming to group tools for Passive cavitation imaging, spanning from simulations of RF signals to reconstruction with diverse methods. It also integrates diverse metrics that are current for evaluating passive cavitation imaging methods."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepinv>=0.3.7",
    "scipy>=1.16.3",
]
